- Added Pattern Lib - Added/updated scss structure

--- a/app/themes/mission-control/assets/manifest.json
+++ b/app/themes/mission-control/assets/manifest.json
@@ -15,7 +15,7 @@
     },
     "editor-style.css": {
       "files": [
-        "styles/utilities/editor-style.less"
+        "styles/utilities/editor-style.scss"
       ]
     },
     "jquery.js": {
