--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -30,32 +30,33 @@
     "npm": ">=2.1.5"
   },
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-load-plugins": "^0.8.0",
-    "gulp-sass": "^1.3.3",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-yaml": "0.2.4",
-    "asset-builder": "^0.4.1",
-    "browser-sync": "^2.0.1",
+    "asset-builder": "^1.0.2",
+    "browser-sync": "2.5.0",
     "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-changed": "^1.2.1",
+    "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.5.1",
     "gulp-autoprefixer": "^2.1.0",
-    "gulp-changed": "^1.1.0",
-    "gulp-concat": "^2.3.4",
+    "gulp-minify-css": "^1.0.0",
+    "gulp-imagemin": "^2.2.1",
+    "imagemin-pngcrush": "^4.0.0",
+    "gulp-jshint": "^1.9.4",
+    "jshint-stylish": "^1.0.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-uglify": "^1.1.0",
+    "wiredep": "^2.2.2",
+    "gulp-yaml": "0.2.4",
     "gulp-flatten": "0.0.4",
     "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.0.0",
-    "gulp-jshint": "^1.8.4",
-    "gulp-plumber": "^0.6.3",
     "gulp-rename": "^1.2.0",
-    "gulp-rev": "^3.0.0",
-    "gulp-uglify": "^1.0.1",
-    "imagemin-pngcrush": "^4.0.0",
-    "jshint-stylish": "^1.0.0",
+    "gulp-rev": "^3.0.1",
     "lazypipe": "^0.2.2",
     "merge-stream": "^0.1.7",
-    "traverse": "^0.6.6",
-    "wiredep": "^2.1.0",
-    "yargs": "^3.2.1"
+    "minimist": "^1.1.1",
+    "run-sequence": "^1.0.2",
+    "traverse": "^0.6.6"
   }
 }
