Massive file changes
- Changes to Lib Files
- Reorg of functions

- Ran gulp, make sure to remove this stuff later

--- a/app/themes/mission-control/assets/config/manifest.json
+++ b/app/themes/mission-control/assets/config/manifest.json
@@ -43,7 +43,7 @@
     "dist": "dist-dev/"
   },
   "config": {
-    "devUrl": "mm2.dev",
+    "devUrl": "apollo.dev",
     "shipDest": "dist/"
   }
 }
