--- a/app/themes/mission-control/bower.json
+++ b/app/themes/mission-control/bower.json
@@ -1,9 +1,10 @@
 {
-  "name": "Fleisher",
-  "version": "0.0.1",
-  "homepage": "http://github.com/emaildano/framework",
+  "name": "Apollo",
+  "version": "0.1.0",
+  "homepage": "http://github.com/j2made/apollo",
   "authors": [
-    "Daniel Olson <emaildano@gmail.com.com>"
+    "Daniel Olson <emaildano@gmail.com.com>",
+    "Shaun M. Baer <shaun.baer@gmail.com.com>"
   ],
   "license": "MIT",
   "private": true,
