- HOTFIX: Updated yml file for `paths`

--- a/app/themes/mission-control/assets/manifest.yml
+++ b/app/themes/mission-control/assets/manifest.yml
@@ -40,7 +40,7 @@
 
 # PATHS
 ## ============================================================
-"path":
+"paths":
   "source":   "assets/"    # Default source: `assets/`
   "dist":     "dist-dev/"  # Default source: `dist/`
 
