--- a/app/themes/mission-control/assets/config/manifest.json
+++ b/app/themes/mission-control/assets/config/manifest.json
@@ -43,7 +43,7 @@
     "dist": "dist-dev/"
   },
   "config": {
-    "devUrl": "apollo.dev",
+    "devUrl": "apollo-working.dev",
     "shipDest": "dist/"
   }
 }
