--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -24,33 +24,33 @@
     "npm": ">=2.1.5"
   },
   "devDependencies": {
-    "asset-builder": "^1.0.2",
-    "browser-sync": "2.5.0",
-    "del": "^1.1.1",
-    "gulp": "^3.8.11",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-plumber": "^1.0.0",
+    "asset-builder": "^1.1.0",
+    "browser-sync": "2.7.12",
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
+    "gulp-load-plugins": "^1.0.0-rc",
+    "gulp-plumber": "^1.0.1",
     "gulp-changed": "^1.2.1",
-    "gulp-sass": "^1.3.3",
-    "gulp-sourcemaps": "^1.5.1",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-imagemin": "^2.2.1",
-    "imagemin-pngcrush": "^4.0.0",
-    "gulp-jshint": "^1.9.4",
-    "jshint-stylish": "^1.0.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-uglify": "^1.1.0",
+    "gulp-sass": "^2.0.2",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-imagemin": "^2.3.0",
+    "imagemin-pngcrush": "^4.1.0",
+    "gulp-jshint": "^1.11.0",
+    "jshint-stylish": "^2.0.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-uglify": "^1.2.0",
     "wiredep": "^2.2.2",
     "gulp-yaml": "0.2.4",
     "gulp-flatten": "0.0.4",
     "gulp-if": "^1.2.5",
-    "gulp-rename": "^1.2.0",
-    "gulp-rev": "^3.0.1",
-    "lazypipe": "^0.2.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-rev": "^5.0.1",
+    "lazypipe": "^0.2.4",
     "merge-stream": "^0.1.7",
     "minimist": "^1.1.1",
-    "run-sequence": "^1.0.2",
+    "run-sequence": "^1.1.1",
     "traverse": "^0.6.6"
   }
 }
