• Fixed no license error on npm install

--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -21,12 +21,7 @@
   "bugs": {
     "url": "https://github.com/j2made/apollo/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://opensource.org/licenses/MIT"
-    }
-  ],
+  "license": "MIT",
   "engines": {
     "node": ">= 0.10.0",
     "npm": ">=2.1.5"
