--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -31,30 +31,30 @@
   },
   "devDependencies": {
     "asset-builder": "^1.1.0",
-    "browser-sync": "^2.8.2",
-    "del": "^1.2.0",
+    "browser-sync": "^2.9.11",
+    "del": "^2.0.2",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-changed": "^1.2.1",
+    "gulp-autoprefixer": "^3.0.2",
+    "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
-    "gulp-flatten": "^0.1.1",
-    "gulp-if": "^1.2.5",
+    "gulp-flatten": "^0.2.0",
+    "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
-    "gulp-jshint": "^1.11.0",
-    "gulp-load-plugins": "^1.0.0-rc",
-    "gulp-minify-css": "^1.2.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-minify-css": "^1.2.1",
     "gulp-plumber": "^1.0.1",
-    "gulp-rev": "^5.0.1",
-    "gulp-sass": "^2.0.2",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
+    "gulp-rev": "^6.0.1",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.4.1",
     "gulp-yaml": "0.2.4",
     "imagemin-pngcrush": "^4.1.0",
     "jshint-stylish": "^2.0.1",
     "lazypipe": "^1.0.1",
     "merge-stream": "^1.0.0",
-    "minimist": "^1.1.1",
-    "run-sequence": "^1.1.1",
+    "minimist": "^1.2.0",
+    "run-sequence": "^1.1.4",
     "traverse": "^0.6.6",
     "wiredep": "^3.0.0-beta"
   }
