--- a/app/themes/mission-control/assets/config/manifest.json
+++ b/app/themes/mission-control/assets/config/manifest.json
@@ -31,16 +31,11 @@
       "files": [
         "styles/editor-style.scss"
       ]
-    },
-    "pattern-lib.css": {
-      "files": [
-        "pattern-lib/styles/pattern-lib.scss"
-      ]
     }
   },
   "paths": {
     "source": "assets/",
-    "dist": "dist-dev/"
+    "dist": "src/"
   },
   "config": {
     "devUrl": "apollo.dev",
