--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -56,6 +56,7 @@
     "minimist": "^1.2.0",
     "run-sequence": "^1.1.4",
     "traverse": "^0.6.6",
-    "wiredep": "^3.0.0-beta"
+    "wiredep": "^3.0.0-beta",
+    "gulp-group-css-media-queries": "1.1.0"
   }
 }
