--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -34,7 +34,6 @@
     "browser-sync": "^2.9.11",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.2",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.2.0",
@@ -42,7 +41,7 @@
     "gulp-imagemin": "^2.3.0",
     "gulp-jshint": "^1.11.2",
     "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-minify-css": "^1.2.1",
+    "gulp-cssnano": "^2.1.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rev": "^6.0.1",
     "gulp-sass": "^2.0.4",
