--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "asset-builder": "^1.1.0",
     "browser-sync": "^2.9.11",
+    "jshint": "2.8.0",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
@@ -39,7 +40,7 @@
     "gulp-flatten": "^0.2.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
-    "gulp-jshint": "^1.11.2",
+    "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-cssnano": "^2.1.0",
     "gulp-plumber": "^1.0.1",
@@ -57,5 +58,8 @@
     "traverse": "^0.6.6",
     "wiredep": "^3.0.0-beta",
     "gulp-group-css-media-queries": "1.1.0"
+  },
+  "dependencies": {
+    "lodash": "^3.10.1"
   }
 }
