--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -31,35 +31,36 @@
   },
   "devDependencies": {
     "asset-builder": "^1.1.0",
-    "browser-sync": "^2.9.11",
-    "jshint": "2.8.0",
-    "del": "^2.0.2",
-    "gulp": "^3.9.0",
+    "browser-sync": "^2.11.1",
+    "jshint": "2.9.1",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.2.0",
     "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.3.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
-    "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-cssnano": "^2.1.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-rev": "^6.0.1",
-    "gulp-sass": "^2.0.4",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-cssnano": "^2.1.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rev": "^7.0.0",
+    "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.4.1",
+    "gulp-uglify": "^1.5.3",
     "gulp-yaml": "1.0.1",
     "imagemin-pngcrush": "^4.1.0",
-    "jshint-stylish": "^2.0.1",
+    "jshint-stylish": "^2.1.0",
     "lazypipe": "^1.0.1",
     "merge-stream": "^1.0.0",
     "minimist": "^1.2.0",
-    "run-sequence": "^1.1.4",
+    "run-sequence": "^1.1.5",
     "traverse": "^0.6.6",
-    "wiredep": "^3.0.0-beta",
-    "gulp-group-css-media-queries": "1.1.0"
+    "wiredep": "^3.0.0",
+    "gulp-group-css-media-queries": "1.1.0",
+    "node-neat": "^1.7.2"
   },
   "dependencies": {
-    "lodash": "^3.10.1"
+    "lodash": "^4.6.1"
   }
 }
