Moved sanitize.css to NPM

--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -58,7 +58,8 @@
     "traverse": "^0.6.6",
     "wiredep": "^3.0.0",
     "gulp-group-css-media-queries": "1.1.0",
-    "node-neat": "^1.7.2"
+    "node-neat": "^1.7.2",
+    "sanitize.css": "3.3.0"
   },
   "dependencies": {
     "lodash": "^4.6.1"
