--- a/app/themes/mission-control/bower.json
+++ b/app/themes/mission-control/bower.json
@@ -15,11 +15,7 @@
   ],
   "dependencies": {
     "modernizr": "2.8.2",
-    "jquery": "1.11.1",
-    "respond": "1.4.2",
-    "bourbon": "~4.2",
-    "neat": "~1.7",
-    "sanitize-css": "latest"
+    "jquery": "1.11.1"
   },
   "overrides": {
     "modernizr": {
