--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -32,17 +32,17 @@
   "devDependencies": {
     "asset-builder": "^1.1.0",
     "browser-sync": "^2.11.1",
-    "jshint": "2.9.1",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.1",
     "gulp-flatten": "^0.2.0",
+    "gulp-group-css-media-queries": "1.1.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-cssnano": "^2.1.1",
     "gulp-plumber": "^1.1.0",
     "gulp-rev": "^7.0.0",
     "gulp-sass": "^2.2.0",
@@ -50,18 +50,20 @@
     "gulp-uglify": "^1.5.3",
     "gulp-yaml": "1.0.1",
     "imagemin-pngcrush": "^4.1.0",
+    "jquery": "^2.2.1",
+    "jshint": "2.9.1",
     "jshint-stylish": "^2.1.0",
     "lazypipe": "^1.0.1",
     "merge-stream": "^1.0.0",
     "minimist": "^1.2.0",
-    "run-sequence": "^1.1.5",
-    "traverse": "^0.6.6",
-    "wiredep": "^3.0.0",
-    "gulp-group-css-media-queries": "1.1.0",
     "node-neat": "^1.7.2",
-    "sanitize.css": "3.3.0"
+    "run-sequence": "^1.1.5",
+    "sanitize.css": "3.3.0",
+    "traverse": "^0.6.6",
+    "wiredep": "^3.0.0"
   },
   "dependencies": {
+    "jquery": "2.2.0",
     "lodash": "^4.6.1"
   }
 }
