--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -1,67 +1,35 @@
 {
-  "name": "mission-control",
-  "version": "0.0.1",
-  "description": "Mission Control theme for Apollo Stack, with Bower, Bourbon and More",
-  "authors": [
-    {
-      "name": "Daniel Olson",
-      "email": "emaildano@gmail.com",
-      "homepage": "https://github.com/emaildano"
-    },
-    {
-      "name": "Shaun Baer",
-      "email": "shaun.baer@gmail.com",
-      "homepage": "https://github.com/iamhexcoder"
-    }
-  ],
+  "name": "apollo",
+  "version": "1.0.0",
+  "description": "Gulpfile for the Apollo boilerplate",
+  "main": "gulpfile.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/j2made/apollo.git"
+    "url": "git+https://github.com/j2made/apollo.git"
   },
+  "author": "",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/j2made/apollo/issues"
   },
-  "license": "MIT",
-  "engines": {
-    "node": ">= 0.10.0",
-    "npm": ">=2.1.5"
-  },
-  "scripts": {
-    "postinstall": "bower install && gulp build"
-  },
+  "homepage": "https://github.com/j2made/apollo#readme",
   "devDependencies": {
-    "asset-builder": "^1.1.0",
-    "browser-sync": "^2.11.1",
-    "jshint": "2.9.1",
-    "del": "^2.2.0",
+    "bourbon": "^4.2.6",
+    "bourbon-neat": "^1.7.4",
     "gulp": "^3.9.1",
-    "gulp-changed": "^1.3.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-flatten": "^0.2.0",
-    "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-load-plugins": "^1.2.0",
     "gulp-cssnano": "^2.1.1",
+    "gulp-foreach": "^0.1.0",
+    "gulp-group-css-media-queries": "^1.1.0",
+    "gulp-if": "^2.0.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-rev": "^7.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-yaml": "1.0.1",
-    "imagemin-pngcrush": "^4.1.0",
-    "jshint-stylish": "^2.1.0",
-    "lazypipe": "^1.0.1",
-    "merge-stream": "^1.0.0",
-    "minimist": "^1.2.0",
-    "run-sequence": "^1.1.5",
-    "traverse": "^0.6.6",
-    "wiredep": "^3.0.0",
-    "gulp-group-css-media-queries": "1.1.0",
-    "node-neat": "^1.7.2",
-    "sanitize.css": "3.3.0"
-  },
-  "dependencies": {
-    "lodash": "^4.6.1"
+    "gulp-util": "^3.0.7",
+    "sanitize.css": "^3.3.0",
+    "yargs": "^4.2.0"
   }
 }
