--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -20,6 +20,7 @@
     "bourbon": "^4.2.6",
     "bourbon-neat": "^1.7.4",
     "gulp": "^3.9.1",
+    "gulp-changed": "^1.3.0",
     "gulp-cssnano": "^2.1.1",
     "gulp-foreach": "^0.1.0",
     "gulp-group-css-media-queries": "^1.1.0",
@@ -27,9 +28,14 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
+    "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "sanitize.css": "^3.3.0",
     "yargs": "^4.2.0"
+  },
+  "dependencies": {
+    "jquery": "^2.2.2"
   }
 }
