--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -17,8 +17,13 @@
   },
   "homepage": "https://github.com/j2made/apollo#readme",
   "devDependencies": {
+    "babelify": "^7.2.0",
     "bourbon": "^4.2.6",
     "bourbon-neat": "^1.7.4",
+    "browser-sync": "^2.11.1",
+    "browserify": "^13.0.0",
+    "browserify-shim": "^3.8.12",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.0",
     "gulp-cssnano": "^2.1.1",
@@ -32,10 +37,24 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "jshint": "^2.9.1",
+    "jshint-stylish-source": "^1.0.5",
+    "lodash.assign": "^4.0.6",
     "sanitize.css": "^3.3.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0",
     "yargs": "^4.2.0"
   },
   "dependencies": {
     "jquery": "^2.2.2"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "jquery": "$"
   }
 }
