--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -49,12 +49,12 @@
   "dependencies": {
     "jquery": "^2.2.2"
   },
+  "browserify-shim": {
+    "jquery": "global:$"
+  },
   "browserify": {
     "transform": [
       "browserify-shim"
     ]
-  },
-  "browserify-shim": {
-    "jquery": "$"
   }
 }
