Working Build and Watchify bundle tasks

--- a/app/themes/mission-control/assets/config.json
+++ b/app/themes/mission-control/assets/config.json
@@ -1,15 +1,8 @@
 {
-  "scripts": {
-    "main.js": {
-      "browserify": true
-    }
-  },
   "paths": {
     "enter": "./assets/",
     "src": "./src/",
     "dist": "./dist/"
   },
-  "opts": {
-    "build_jquery": true
-  }
+  "devUrl": "apollo-rev.dev"
 }
