--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -26,16 +26,10 @@
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.0",
-    "gulp-cssnano": "^2.1.1",
-    "gulp-foreach": "^0.1.0",
-    "gulp-group-css-media-queries": "^1.1.0",
-    "gulp-if": "^2.0.0",
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.1",
     "gulp-flatten": "^0.2.0",
+    "gulp-foreach": "^0.1.0",
     "gulp-group-css-media-queries": "1.1.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
@@ -43,6 +37,7 @@
     "gulp-load-plugins": "^1.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rev": "^7.0.0",
     "gulp-sass": "^2.2.0",
     "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
