--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -38,11 +38,13 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^7.0.0",
+    "gulp-rev-all": "^0.8.24",
     "gulp-sass": "^2.2.0",
     "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "imagemin-pngquant": "^4.2.2",
     "jshint": "^2.9.1",
     "jshint-stylish-source": "^1.0.5",
     "lodash.assign": "^4.0.6",
