--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -23,12 +23,12 @@
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
+    "debowerify": "^1.4.1",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.1",
-    "gulp-flatten": "^0.2.0",
     "gulp-foreach": "^0.1.0",
     "gulp-group-css-media-queries": "1.1.0",
     "gulp-if": "^2.0.0",
@@ -38,7 +38,6 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^7.0.0",
-    "gulp-rev-all": "^0.8.24",
     "gulp-sass": "^2.2.0",
     "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
@@ -63,6 +62,7 @@
   "browserify": {
     "transform": [
       "babelify",
+      "debowerify",
       "browserify-shim"
     ]
   }
