--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -29,10 +29,11 @@
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.1",
+    "gulp-flatmap": "^1.0.0",
     "gulp-foreach": "^0.1.0",
     "gulp-group-css-media-queries": "1.1.0",
     "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.4.0",
+    "gulp-imagemin": "^3.0.1",
     "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-plumber": "^1.1.0",
@@ -43,7 +44,7 @@
     "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
-    "imagemin-pngquant": "^4.2.2",
+    "imagemin-pngquant": "^5.0.0",
     "jshint": "^2.9.1",
     "jshint-stylish-source": "^1.0.5",
     "lodash.assign": "^4.0.6",
