--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -26,6 +26,7 @@
     "debowerify": "^1.4.1",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.1",
