--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -17,17 +17,18 @@
   },
   "homepage": "https://github.com/j2made/apollo#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.2.0",
     "bourbon": "^4.2.6",
-    "bourbon-neat": "^1.7.4",
+    "bourbon-neat": "^2.0.0",
     "browser-sync": "^2.11.1",
-    "browserify": "^13.0.0",
+    "browserify": "^14.1.0",
     "browserify-shim": "^3.8.12",
     "debowerify": "^1.4.1",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-changed": "^1.3.0",
+    "gulp-changed": "^2.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.1",
     "gulp-flatmap": "^1.0.0",
@@ -39,7 +40,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^7.0.0",
-    "gulp-sass": "^2.2.0",
+    "gulp-sass": "^3.1.0",
     "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-uglify": "^2.0.0",
@@ -48,11 +49,11 @@
     "jshint": "^2.9.1",
     "jshint-stylish-source": "^1.0.5",
     "lodash.assign": "^4.0.6",
-    "sanitize.css": "^4.1.0",
+    "sanitize.css": "^5.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
-    "yargs": "^6.2.0"
+    "yargs": "^7.0.2"
   },
   "dependencies": {
     "jquery": "^3.1.1"
