--- a/app/themes/mission-control/package.json
+++ b/app/themes/mission-control/package.json
@@ -17,54 +17,54 @@
   },
   "homepage": "https://github.com/j2made/apollo#readme",
   "devDependencies": {
-    "babelify": "^7.2.0",
-    "bourbon": "^4.2.6",
-    "bourbon-neat": "^1.7.4",
-    "browser-sync": "^2.11.1",
-    "browserify": "^13.0.0",
-    "browserify-shim": "^3.8.12",
-    "debowerify": "^1.4.1",
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-changed": "^1.3.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-cssnano": "^2.1.1",
-    "gulp-flatmap": "^1.0.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-es2016": "6.24.1",
+    "babelify": "7.3.0",
+    "browser-sync": "2.18.12",
+    "browserify": "14.4.0",
+    "browserify-shim": "^3.8.14",
+    "debowerify": "1.5.0",
+    "del": "3.0.0",
+    "gulp": "3.9.1",
+    "gulp-autoprefixer": "4.0.0",
+    "gulp-changed": "3.1.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "2.1.2",
+    "gulp-flatmap": "1.0.0",
     "gulp-group-css-media-queries": "1.2.0",
-    "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^3.0.1",
-    "gulp-jshint": "^2.0.0",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-rev": "^7.0.0",
-    "gulp-sass": "^2.2.0",
-    "gulp-sequence": "^0.4.5",
-    "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "imagemin-pngquant": "^5.0.0",
-    "jshint": "^2.9.1",
-    "jshint-stylish-source": "^1.0.5",
-    "lodash.assign": "^4.0.6",
-    "sanitize.css": "^4.1.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0",
-    "yargs": "^6.2.0"
+    "gulp-if": "2.0.2",
+    "gulp-imagemin": "3.3.0",
+    "gulp-jshint": "2.0.4",
+    "gulp-load-plugins": "1.5.0",
+    "gulp-plumber": "1.1.0",
+    "gulp-rename": "1.2.2",
+    "gulp-rev": "7.1.2",
+    "gulp-sass": "3.1.0",
+    "gulp-sequence": "0.4.6",
+    "gulp-sourcemaps": "2.6.0",
+    "gulp-uglify": "3.0.0",
+    "gulp-util": "3.0.8",
+    "imagemin-pngquant": "5.0.1",
+    "jshint": "2.9.5",
+    "jshint-stylish-source": "1.0.5",
+    "lodash.assign": "4.2.0",
+    "partsandlabor": "1.1.0",
+    "sanitize.css": "5.0.0",
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0",
+    "watchify": "3.9.0",
+    "yargs": "8.0.2"
   },
   "dependencies": {
     "jquery": "^3.1.1"
   },
-  "browserify-shim": {
-    "jquery": "global:$"
-  },
   "browserify": {
     "transform": [
-      "babelify",
       "debowerify",
       "browserify-shim"
     ]
+  },
+  "browserify-shim": {
+    "jquery": "global:$"
   }
 }
