--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
   ],
   "require": {
     "php": ">=5.4",
-    "johnpbloch/wordpress": "4.9",
+    "johnpbloch/wordpress": "4.9.*",
     "composer/installers": "1.3.0"
   },
   "extra": {
